--- a/styles/index.css
+++ b/styles/index.css
@@ -13,3 +13,14 @@ article a {
 body {
     direction: rtl;
 }
+
+:root {
+    /* Your default theme */
+    --background: white;
+    --foreground: black;
+}
+
+[data-theme='dark'] {
+    --background: black;
+    --foreground: white;
+}
